Refactor for sonar lint errors